--- a/mylist-boot/app/src/main/resources/static/contact/form.html
+++ b/mylist-boot/app/src/main/resources/static/contact/form.html
@@ -1,56 +1,54 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
   <title>연락처</title>
 </head>
+
 <body>
   <h1>새 연락처</h1>
-<form>
-이름: <input id="x-name" type="text"><br>
-이메일: <input id="x-email" type="email"><br>
-전화: <input id="x-tel" type="tel"><br>
-회사: <input id="x-company" type="text"><br>
-<button id ="x-add-btn" type="button">추가</button>
-<button id ="x-cancel-btn" type="button">취소</button>
-</form>
+  <form>
+    이름*: <input id="x-name" type="text"><br>
+    이메일*: <input id="x-email" type="text"><br>
+    전화*: <input id="x-tel" type="text"><br>
+    회사: <input id="x-company" type="text"><br>
+    별표(*) 항목은 필수 입력입니다.<br>
+    <button id="x-add-btn" type="button">등록</button>
+    <button id="x-cancel-btn" type="button">취소</button>
+  </form>
 
-<script>
-var xName = document.querySelector("#x-name")
-var xEmail = document.querySelector("#x-email")
-var xTel = document.querySelector("#x-tel")
-var xCompany = document.querySelector("#x-company")
+  <script type="text/javascript">
+    var xName = document.querySelector("#x-name")
+    var xEmail = document.querySelector("#x-email")
+    var xTel = document.querySelector("#x-tel")
+    var xCompany = document.querySelector("#x-company")
 
-document.querySelector("#x-add-btn").onclick = function() {
+    document.querySelector("#x-add-btn").onclick = function() {
 
-  fetch(`/contact/add?name=${xName.value}&email=${xEmail.value}&tel=${xTel.value}&company=${xCompany.value}`)
-  .then(function(response){
-    return response.text()
-  })
-  .then(function(result) {
-    console.log(result)
-    location.href = "index.html"
-  })
-}
+      if (xName.value == "" || xEmail.value == "" || xTel.value == "") {
+        alert("필수 입력 항목이 비어 있습니다.")
+        return
+      }
 
-document.querySelector("#x-cancel-btn").onclick = function() {
-  window.location.href= "index.html"
-}
+      fetch(`/contact/add?name=${ xName.value}&email=${xEmail.value}&tel=${xTel.value}&company=${xCompany.value}`)
+        .then(function(response) {
+          // 문자열을 넘겼기 때문에 제이슨이 아니다 따라서 텍스트로 받는다
+          // 제이슨 형식의 문자열은 양쪽 끝에 "가 붙어야 한다
+          return response.text()
+        })
+        .then(function(text) {
+          location.href = "index.html"
+        })
+    }
 
-
-</script>
-
-
+    document.querySelector("#x-cancel-btn").onclick = function() {
+      location.href = "index.html"
+    }
+  </script>
 
 
 
 </body>
+
 </html>
-
-
-
-
-
-
-
-
