--- a/web/app/src/main/resources/static/javascript/ex03/exam11-3.html
+++ b/web/app/src/main/resources/static/javascript/ex03/exam11-3.html
@@ -37,6 +37,11 @@ box2.setValue(200);
 console.log(box1.getValue());
 console.log(box2.getValue());
 
+
+let [a = 2 , b = 4, c = 5] = [1,2]
+console.log(a);
+console.log(b);
+console.log(c);
 </script>
 
 </body>
