--- a/web/app/src/main/resources/static/css/test01_3.html
+++ b/web/app/src/main/resources/static/css/test01_3.html
@@ -18,11 +18,11 @@
   .member {
     display: none;
   }
- 
+
   .c1 {
     color: red;
   }
-  
+
   .c2 {
     color: blue;
     font-weight: bold;
@@ -30,7 +30,7 @@
   }
 
   .c1, .c2 {
-    border-style: double;
+    border-style: solid;
   }
 
   </style>
@@ -58,7 +58,7 @@ IT 분야로의 성공적인 취업과 창업준비!!<br>
 <ul>
   <li class="c1">자바 웹개발자 양성과정</li>
   <li class="c1">IoT 개발자 양성과정</li>
-  <li class="c2 c1">윈도우 프로그래머 과정</li>
+  <li class="c1 c2">윈도우 프로그래머 과정</li>
   <li class="c2">빅데이터 프로페셔널 과정</li>
 </ul>
 </div>
