--- a/web/app/src/main/resources/static/css/test02_2.html
+++ b/web/app/src/main/resources/static/css/test02_2.html
@@ -9,12 +9,20 @@
      => 여러 개의 대상자를 지정할 때 콤마로 나열한다.
    */
 
-  .c2, #footer, h1, p, li:hover {
+   .c2 {
+     border-width: 1px;
+     border-color: red;
+     border-style: dashed;
+     margin: 10px;
+   }
+
+  #footer, h1, p, li:hover {
     border-width: 1px;
     border-color: red;
     border-style: dashed;
     margin: 10px;
   }
+
   </style>
 </head>
 <body>
