--- a/web/app/src/main/resources/static/javascript/ex04/exam10-7.html
+++ b/web/app/src/main/resources/static/javascript/ex04/exam10-7.html
@@ -2,54 +2,51 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <title>ex04</title>
+	<meta charset="UTF-8">
+	<title>ex04</title>
 </head>
 
 <body>
-  <h1>객체 - 객체 생성과 초기화 VI</h1>
-  <script>
-    "use strict"
+	<h1>객체 - 객체 생성과 초기화 VII</h1>
+	<script>
+		"use strict"
+		// 7) 생성자 역할을 하는 함수의 이름은 대문자로 시작한다.
+		// 		생성자 이름은 객체의 용도를 표현하는 명사 형태로 짓는다.
 
-    // 함수를 생성자로서 실행할 때 수행하는 특별한 동작!
+		// 자바스크립트는 생성자 문법이 따로 없기 때문에
+		// 함수의 이름을 대문자로 시작하 다른 개발자에게 알려준
+		// 다른 개발자에게
+		function Score(name, kor, eng, math) {
+			// new 명령을 실항한 후에 이 함수를 호출하면
+			// this 내장 변수에 그 생성된 객체 주소가 저장된다.
+			// 이렇게 돠면 이 함수 내부에서 객체를 생성할 필요가 없다.
+			// this 내장 변수를 사용하여 객체를 사용하면 된다.
+			this.name = name;
+			this.kor = kor;
+			this.eng = eng;
+			this.math = math;
+			this.sum = function() {
+				return this.kor + this.eng + this.math;
+			};
+			this.aver = function() {
+				return this.sum() / 3;
+			};
+		}
 
-    function createScore() {
-      // 함수를 new 명령 다음에 호출하면 생성자로서 역할을 수행한다
-      // 생성자인 경우 다음 문장이 자동으로 수행된다.
-      //this.Object();
-      //이 때 this 변수에는 new명령으로 만든 객체의 주소가 들어있다.
+		var scores = []; //new Array(); new가  scores[]로 리턴한다.
+		scores[0] = new Score("홍길동", 100, 100, 100);
+		scores[1] = new Score("임꺽정", 90, 90, 90);
+		scores[2] = new Score("유관순", 80, 80, 80);
 
-    }
-
-    var obj1 = new createScore();
-    console.log(obj1);
-    console.log("-----------------------");
-
-    // 기본 프로퍼티가 들어 있는지 확인해보자.
-    console.log(obj1.toString());
-    console.log(obj1.valueOf());
-    console.log("-----------------------");
-
-    // Object()가 아닌 개발자가 정의한 생성자를 사용했기 때문에
-    // 객체 프로퍼티에 생성자가 정보가 추가로 들어 있다.
-    var obj2 = new Object();
-    var obj3 = new createScore();
-    console.log(obj2);
-    console.log(obj3);
-    console.log("-----------------------");
-
-    console.log(typeof obj2);
-    console.log(typeof obj3);
-    console.log("-----------------------");
-
-    console.log(obj2 instanceof Object);
-    console.log(obj3 instanceof Object);
-    console.log("-----------------------");
-
-    console.log(obj2 instanceof createScore);
-    console.log(obj3 instanceof createScore);
-    console.log("-----------------------");
-  </script>
+		// 위와 같이 함수 이름이 대문자로 시작하면
+		// 생성자 역할을 하는 함수임을 직관적으로 알 수 있어 유지보수에 좋다.
+		// 자바스크립트에는 생성자 문법이 존재하지 않는다.
+		for (var score of scores) {
+			console.log(score);
+			console.log(score.name, score.kor, score.eng, score.math,
+				score.sum(), score.aver());
+		}
+	</script>
 </body>
 
 </html>
