--- a/web/app/src/main/resources/static/javascript/ex04/exam11-4.html
+++ b/web/app/src/main/resources/static/javascript/ex04/exam11-4.html
@@ -19,18 +19,17 @@
     var obj2 = new f2()
     var obj3 = new f3()
 
-    // f1(), f2(), f3() 생성자로 초기화시킨 객체 모두에
-    // Object()가 추가한 변수와 함수가 들어있다.
-
     console.log(obj1);
     console.log(obj2);
     console.log(obj3);
 
-    console.log(obj1.toString()); // Object.prototype. toString
-    console.log(obj2.toString()); // Object.prototype. toString
-    console.log(obj3.toString()); // Object.prototype. toString
+    console.log(obj1.toString());
+    console.log(obj2.toString());
+    console.log(obj3.toString());
 
+console.log("--------------------------");
 
+console.log(obj1.toString());
 
   </script>
 </body>
