--- a/web/app/src/main/resources/static/javascript/ex05/exam01-0.html
+++ b/web/app/src/main/resources/static/javascript/ex05/exam01-0.html
@@ -21,15 +21,21 @@
 
 // document의 타입은?
 // ==> 즉 document 객체를 초기화시킨 생성자는?
+
 console.log(document.constructor.name);
 
-console.log(document.toString);
+console.log(document); // HTML이 들어있다.
 
-console.log(document.addEventListener);
+console.log(Document.prototype);
+
+console.log(document.createElement);
 
 console.log(document.appendChild);
 
-console.log(document.createElement);
+console.log(document.addEventListener);
+
+console.log(document.toString);
+
 
 </script>
 </body>
