--- a/mylist-boot/app/src/main/resources/static/board/form.html
+++ b/mylist-boot/app/src/main/resources/static/board/form.html
@@ -7,12 +7,10 @@
 </head>
 
 <body>
-  <h1>새 글</h1>
+  <h1>새 게시글</h1>
   <form>
     제목*: <input id="x-title" type="text"><br>
-    내용*: <input id="x-content" type="text"><br>
-    조회수*: <input id="x-viewCount" type="text"><br>
-    날짜: <input id="x-createDate" type="text"><br>
+    내용*: <textarea id="x-content" cols="60" rows="10"></textarea><br>
     별표(*) 항목은 필수 입력입니다.<br>
     <button id="x-add-btn" type="button">등록</button>
     <button id="x-cancel-btn" type="button">취소</button>
@@ -21,19 +19,16 @@
   <script type="text/javascript">
     var xTitle = document.querySelector("#x-title")
     var xContent = document.querySelector("#x-content")
-    var xViewCount = document.querySelector("#x-viewCount")
-    var xCreateDate = document.querySelector("#x-createDate")
 
     document.querySelector("#x-add-btn").onclick = function() {
 
       if (xTitle.value == "" || xContent.value == "" ) {
         alert("필수 입력 항목이 비어 있습니다.")
-        return
+        return;
       }
 
-      fetch(`/board/add?title=${xTitle.value}&content=${xContent.value}&viewcount=${xViewCount.value}&createdate=${xCreateDate.value}`)
+      fetch(`/board/add?title=${xTitle.value}&content=${xContent.value}`)
         .then(function(response) {
-
           // 문자열을 넘겼기 때문에 제이슨이 아니다 따라서 텍스트로 받는다
           // 제이슨 형식의 문자열은 양쪽 끝에 "가 붙어야 한다
           return response.json()
