--- a/mylist-boot/app/src/main/resources/static/test/index0.html
+++ b/mylist-boot/app/src/main/resources/static/test/index0.html
@@ -3,16 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <title>게시판</title>
+  <title></title>
 </head>
 
 <body>
-  <h1>게시글</h1>
+  <h1>게시판</h1>
   <a href="form.html">새 게시글</a>
   <table id="x-board-table" border="1">
     <thead>
       <tr>
         <th>제목</th>
+        <th>내용</th>
         <th>조회수</th>
         <th>날짜</th>
       </tr>
@@ -25,32 +26,34 @@
   <script type="text/javascript">
     var tbody = document.querySelector("#x-board-table tbody")
 
-    // fetch 서버에 요청하고 답을 받음
     fetch("/board/list")
       .then(function(response) {
-        // fetch 실행 오류 처리 방법
-        // if (!response.ok) {
-        //   alert("서버 실행 오류!")
-        //   return
-        // }
+
         return response.json()
       })
       .then(function(boards) {
-
+        console.log(boards)
         for (var i = 0; i < boards.length; i++) {
-          board = boards[i];
           var tr = document.createElement("tr")
-          tr.innerHTML = `<td><a href="view.html?index=${i}">${board.title}</a></td>
-        <td>${board.viewCount}</td>
-        <td>${board.createdDate}</td>`
+          tr.setAttribute("data-no", i);
+          var board = boards[i];
+          tr.innerHTML = `<td class="counting-${i}"><a  onclick="countUp(${i});">${board.title}</a></td>
+        <td>${board.content}</td>
+        <td class="x-counting-${i}">${board.viewCount}</td>
+        <td>${board.createDate}</td>`
           tbody.appendChild(tr)
         }
       })
-    // 서버실행 오류 처리 방법 1 catch문
-    // .catch(function(error) {
-    //   alert("서버 실행 오류입니다!")
-    //   console.log(error)
-    // })
+
+    var count = 0;
+
+    function countUp(no) {
+      var counting = document.querySelector(`tbody > tr[data-no="${no}"] > td.x-counting-${no}`);
+      count = count + 1
+      counting.innerText = count;
+      console.log(counting.innerText);
+    }
+
   </script>
 </body>
 
