--- a/mylist-boot/app/src/main/resources/static/todo/index.html
+++ b/mylist-boot/app/src/main/resources/static/todo/index.html
@@ -110,6 +110,7 @@
             var titleSpan = document.querySelector(`tr[data-no="${no}"] > td.todo-title > span`);
             if (checked) {
               titleSpan.classList.add("todo-checked");
+              // classList.add ==> element 안에 todo-checked를 추가
             } else {
               titleSpan.classList.remove("todo-checked")
             }
@@ -120,6 +121,7 @@
     function updateTodo(no) {
       // 현재 Todo 항목을 편집 중인 상태에서 변경 버튼을 눌렀다면
       if (titleInput.parentNode instanceof HTMLTableCellElement) {
+        //
         // 다른 항목을 편집하기 위해 이동하기 전에 편집 전의 상태로 되돌린다.
         titleInput.parentNode.querySelector("span").style["display"] = "";
       }
@@ -130,6 +132,7 @@
       titleInput.setAttribute("data-no", no);
       titleTd.appendChild(titleInput);
       titleInput.style["display"] = "";
+
     }
 
     titleInput.onkeyup = function(e) {
