--- a/mylist-boot/app/src/main/resources/static/index.html
+++ b/mylist-boot/app/src/main/resources/static/index.html
@@ -11,6 +11,7 @@
   <li><a href="contact/index.html">연락처</a></li>
   <li><a href="todo/index.html">해야 할 일</a></li>
   <li><a href="board/index.html">게시글</a></li>
+  <li><a href="book/index.html">독서록</a></li>
 </ul>
 </body>
 </html>
