--- a/mylist-boot/app/src/main/resources/static/book/form.html
+++ b/mylist-boot/app/src/main/resources/static/book/form.html
@@ -38,7 +38,7 @@
       return;
     }
 
-    var qs = `index=${index}&title=${xTitle.value}&author=${xAuthor.value}&press=${xPress.value}`;
+    var qs = `title=${xTitle.value}&author=${xAuthor.value}&press=${xPress.value}`;
     qs += `&price=${xPrice.value}&page=${xPage.value}&feed=${xFeed.value}`;
 
     // 독서일을 입력했을 때만 서버에 보낸다.
