--- a/mylist-boot/app/src/main/resources/static/todo/index.html
+++ b/mylist-boot/app/src/main/resources/static/todo/index.html
@@ -1,180 +1,167 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
   <title>To-do</title>
   <style>
-    .todo-checked {
-      text-decoration: line-through;
-      color: gray;
-    }
+  .todo-checked {
+    text-decoration: line-through;
+    color: gray;
+  }
   </style>
 </head>
-
 <body>
-  <h1>To-do</h1>
+<h1>To-do</h1>
 
-  <p>할 일 <input id="x-todo-input" type="text"></p>
-  <table id="x-todo-table" border="1">
-    <thead>
-      <tr>
-        <th></th>
-        <th>해야 할 일</th>
-        <th>변경</th>
-        <th>삭제</th>
-      </tr>
-    </thead>
-    <tbody>
-    </tbody>
-  </table>
+<p>할 일 <input id="x-todo-input" type="text"></p>
+<table id="x-todo-table" border="1">
+<thead>
+  <tr>
+    <th></th>
+    <th>해야 할 일</th>
+    <th>변경</th>
+    <th>삭제</th>
+  </tr>
+</thead>
+<tbody>
+</tbody>
+</table>
 
-  <input type="text" id="x-title-input">
+<input type="text" id="x-title-input">
 
-  <script type="text/javascript">
-    "use strict"
+<script type="text/javascript" src="../myQuery.js"></script>
+<script type="text/javascript">
+  "use strict"
 
-    var titleInput = document.querySelector("#x-title-input");
-    // querySelector는 엘리먼트 형식으로 가져온다 titleInput엘리먼트다
-    titleInput.style["display"] = "none";
+  var titleInput = $("#x-title-input");
+  titleInput.css("display", "none");
 
-    var tbody = document.querySelector("#x-todo-table tbody");
+  var tbody = $("#x-todo-table tbody");
 
-    document.querySelector("#x-todo-input").onkeyup = function(e) {
-      if (e.keyCode == 27) {
-        e.target.value = "";
-      } else if (e.keyCode == 13) {
-        if (e.target.value == "") {
-          window.alert("필수 입력 항목이 비어 있습니다.");
-          return;
-        }
+  $("#x-todo-input").onkeyup = function(e) {
+    if (e.keyCode == 27) {
+      e.target.value = "";
 
-        fetch(`/todo/add?title=${e.target.value}`)
-          .then(function(response) {
-            return response.text();
-          })
-          .then(function(text) {
-            console.log(text);
-            location.reload();
-          });
+    } else if (e.keyCode == 13) {
+      if (e.target.value == "") {
+        window.alert("필수 입력 항목이 비어 있습니다.");
+        return;
       }
-    }
 
-    fetch("/todo/list")
-      .then(function(response) {
-        return response.json();
-      })
-      .then(function(todoList) {
-        console.log(todoList);
-        for (var i = 0; i < todoList.length; i++) {
-          var tr = document.createElement("tr");
-          tr.setAttribute("data-no", i);
-          // 속성 값을 설정 get은 그 설정값을 가져온다.
-          var checkedOption = "";
-          var titleTdOption = "";
-          if (todoList[i].done) {
-            checkedOption = "checked";
-            titleTdOption = "class='todo-checked'";
-          }
-          tr.innerHTML = `<td><input type="checkbox" ${checkedOption} onchange="checkTodo(${i}, event.target.checked)"></td>
-        <td class="todo-title"><span ${titleTdOption}>${todoList[i].title}</span></td>
-        <td><button type="button" onclick="updateTodo(${i})">변경</button></td>
-        <td><button type="button" onclick="deleteTodo(${i})">삭제</button></td>`;
-          tbody.appendChild(tr);
-        }
-        document.querySelector("#x-todo-input").focus();
-      });
-
-    function deleteTodo(no) {
-      fetch(`/todo/delete?index=${no}`)
+      fetch(`/todo/add?title=${e.target.value}`)
         .then(function(response) {
-          return response.json();
+          return response.text();
         })
-        .then(function(result) {
-          if (result == 0) {
-            window.alert("삭제하지 못했습니다!");
-          } else {
-            location.reload();
-          }
+        .then(function(text) {
+          console.log(text);
+          location.reload();
         });
     }
+  };
 
-    function checkTodo(no, checked) {
-      console.log(no, checked);
-      fetch(`/todo/check?index=${no}&done=${checked}`)
-        .then(function(response) {
-          return response.json();
-        })
-        .then(function(result) {
-          if (result == 0) {
-            window.alert("변경하지 못했습니다!");
-          } else {
-            var titleSpan = document.querySelector(`tr[data-no="${no}"] > td.todo-title > span`);
-            if (checked) {
-              titleSpan.classList.add("todo-checked");
-              // classList.add ==> element 안에 todo-checked를 추가
-            } else {
-              titleSpan.classList.remove("todo-checked")
-            }
-          }
-        });
-    }
-
-    function updateTodo(no) {
-      // 현재 Todo 항목을 편집 중인 상태에서 변경 버튼을 눌렀다면
-      if (titleInput.parentNode instanceof HTMLTableCellElement) {
-        // 모든 엘리먼트는 생성자가 있다. cell은 td를 가르킨다. 모든 생성자에는 타입이 지정되 있고
-        // instanceof는 타입을 비교하는 것
-        // 엘리먼트는 href 등  많은 정보를 알 수 있다.
-        //
-        // 다른 항목을 편집하기 위해 이동하기 전에 편집 전의 상태로 되돌린다.
-        titleInput.parentNode.querySelector("span").style["display"] = "";
+  fetch("/todo/list")
+    .then(function(response) {
+      return response.json();
+    })
+    .then(function(todoList) {
+      console.log(todoList);
+      for (var todo of todoList) {
+        var tr = document.createElement("tr");
+        tr.setAttribute("data-no", todo.no);
+        var checkedOption = "";
+        var titleTdOption = "";
+        if (todo.done) {
+          checkedOption = "checked";
+          titleTdOption = "class='todo-checked'";
+        }
+        tr.innerHTML = `<td><input type="checkbox" ${checkedOption} onchange="checkTodo(${todo.no}, event.target.checked)"></td>
+        <td class="todo-title"><span ${titleTdOption}>${todo.title}</span></td>
+        <td><button type="button" onclick="updateTodo(${todo.no})">변경</button></td>
+        <td><button type="button" onclick="deleteTodo(${todo.no})">삭제</button></td>`;
+        tbody.appendChild(tr);
       }
-      var titleTd = document.querySelector(`tr[data-no="${no}"] > td.todo-title`);
-      var titleSpan = titleTd.querySelector("span");
-      titleSpan.style["display"] = "none";
-      titleInput.value = titleSpan.innerHTML;
-      titleInput.setAttribute("data-no", no);
-      titleTd.appendChild(titleInput);
-      // appendChild 메서드는 append 메서드와는 달리 오직 Node 객체만 받을 수 있다.
-      // append는 여러 개의 노드와 문자를 추가할 수 있는 반면에 appendChild는 한번에 오직 하나의 노드만 추가할 수 있다.
-      titleInput.style["display"] = "";
+      $("#x-todo-input").focus();
+    });
 
-    }
-// keydown keypress keyup 하나라도 실행되면 3개가 모두 실행된다.
-// mousedown mouseup onclick 하나라도 실행되면 3개가 모두 실행된다.
+ function deleteTodo(no) {
+   fetch(`/todo/delete?no=${no}`)
+     .then(function(response) {
+       return response.json();
+     })
+     .then(function(result) {
+       if (result == 0) {
+         window.alert("삭제하지 못했습니다!");
+       } else {
+         location.reload();
+       }
+     });
+ }
 
-    titleInput.onkeyup = function(e) {
-      var no = titleInput.getAttribute("data-no");
-      var titleSpan = titleInput.parentNode.querySelector("span");
-      var originTitle = titleSpan.innerHTML;
+ function checkTodo(no, checked) {
+   console.log(no, checked);
+   fetch(`/todo/check?no=${no}&done=${checked}`)
+     .then(function(response) {
+       return response.json();
+     })
+     .then(function(result) {
+       if (result == 0) {
+         window.alert("변경하지 못했습니다!");
+       } else {
+         var titleSpan = $(`tr[data-no="${no}"] > td.todo-title > span`);
+         if (checked) {
+           titleSpan.classList.add("todo-checked");
+         } else {
+           titleSpan.classList.remove("todo-checked")
+         }
+       }
+     });
+ }
 
-      if (e.keyCode == 27) { // ESC 키를 눌러 편집을 취소한다면
-        cancelTodoEditing();
-      } else if (e.keyCode == 13 && titleInput.value != "" && originTitle != titleInput.value) {
-        fetch(`/todo/update?index=${no}&title=${titleInput.value}`)
-          .then(function(response) {
-            return response.json();
-          })
-          .then(function(result) {
-            if (result == 0) {
-              window.alert("변경하지 못했습니다!");
-            } else {
-              console.log("변경했습니다.");
-              titleSpan.innerHTML = titleInput.value;
-              cancelTodoEditing();
-            }
-          });
-      }
-    };
+ function updateTodo(no) {
+   // 현재 Todo 항목을 편집 중인 상태에서 변경 버튼을 눌렀다면
+   if (titleInput.parentNode instanceof HTMLTableCellElement) {
+     // 다른 항목을 편집하기 위해 이동하기 전에 편집 전의 상태로 되돌린다.
+     titleInput.parentNode.querySelector("span").style["display"] = "";
+   }
+   var titleTd = $(`tr[data-no="${no}"] > td.todo-title`);
+   var titleSpan = titleTd.find("span");
+   titleSpan.css( "display", "none" );
+   titleInput.val( titleSpan.html() );
+   titleInput.attr("data-no", no);
+   titleTd.appendChild(titleInput);
+   titleInput.css("display", "");
+ }
 
-    function cancelTodoEditing() {
-      titleInput.parentNode.querySelector("span").style["display"] = ""; // 상위 태그의 스타일 대로
-      titleInput.style["display"] = "none";
-      document.body.appendChild(titleInput);
-    }
-  </script>
+ titleInput.onkeyup = function(e) {
+   var no = titleInput.getAttribute("data-no");
+   var titleSpan = titleInput.parentNode.querySelector("span");
+   var originTitle = titleSpan.innerHTML;
+
+   if (e.keyCode == 27) { // ESC 키를 눌러 편집을 취소한다면
+     cancelTodoEditing();
+   } else if (e.keyCode == 13 && titleInput.value != "" && originTitle != titleInput.value) {
+     fetch(`/todo/update?no=${no}&title=${titleInput.value}`)
+       .then(function(response) {
+         return response.json();
+       })
+       .then(function(result) {
+         if (result == 0) {
+           window.alert("변경하지 못했습니다!");
+         } else {
+           console.log("변경했습니다.");
+           titleSpan.innerHTML = titleInput.value;
+           cancelTodoEditing();
+         }
+       });
+   }
+ };
+
+ function cancelTodoEditing() {
+   titleInput.parentNode.querySelector("span").style["display"] = "";
+   titleInput.style["display"] = "none";
+   document.body.appendChild(titleInput);
+ }
+</script>
 
 </body>
-
 </html>
